tests/ui/parser/removed-syntax/removed-syntax-fixed-vec.rs
type v = [isize * 3];
//~^ ERROR expected `;` or `]`, found `*`
//~| WARN type `v` should have an upper camel case name [non_camel_case_types]


fn main() {}
